--- a/solution-form/src/index.css
+++ b/solution-form/src/index.css
@@ -28,6 +28,9 @@ body {
 }
 
 @media screen and (max-width: 1024px) {
+  body {
+    padding-top: 20px;
+  }
   .sideBar {
     background-image: url("./assets//images/bg-sidebar-mobile.svg");
   }
